half-fix for low contrast input fields

--- a/userContent.css
+++ b/userContent.css
@@ -185,3 +185,35 @@
 .activity-stream .context-menu-item a .icon {
   transform: scale(0.8);
 }
+
+
+/* https://github.com/horst3180/arc-firefox-theme/issues/44 */
+
+input:not(.urlbar-input):not(.textbox-input):not(.form-control):not([type='checkbox']):not([type='radio']) {
+    -moz-appearance: none !important;
+    background-color: white;
+    background-color: inherit;
+    color: black;
+    color: inherit;
+}
+
+#downloads-indicator-counter {
+    color: white;
+    color: inherit;
+}
+
+textarea {
+    -moz-appearance: none !important;
+    background-color: white;
+    background-color: inherit;
+    color: black;
+    color: inherit;
+}
+
+select {
+    -moz-appearance: none !important;
+    background-color: white;
+    background-color: inherit;
+    color: black;
+    color: inherit;
+}
